<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CRUD_repo">

    <EditText
        android:id="@+id/Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="96dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/Titulo"
        android:inputType="textPersonName"
        android:singleLine="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/sp_TdA"
        android:layout_width="match_parent"
        android:layout_height="39dp"
        android:layout_marginTop="40dp"
        android:entries="@array/tipos"
        android:spinnerMode="dropdown"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sp_NoP" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="222dp"
        android:layout_height="64dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="92dp"
        android:gravity="center_horizontal|fill_horizontal|fill_vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Depiction">

        <RadioButton
            android:id="@+id/R_no"
            android:layout_width="102dp"
            android:layout_height="35dp"
            android:text="@string/P_no" />

        <RadioButton
            android:id="@+id/R_yes"
            android:layout_width="103dp"
            android:layout_height="31dp"
            android:gravity="fill_horizontal"
            android:text="@string/P_si" />
    </RadioGroup>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="44dp"
        android:text="@string/NoP"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="56dp"
        android:text="@string/TdA"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="192dp"
        android:text="@string/Public"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/Depiction"
        android:layout_width="372dp"
        android:layout_height="119dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/Descripcion"
        android:importantForAutofill="no"
        android:inputType="textMultiLine"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Title" />

    <Spinner
        android:id="@+id/sp_NoP"
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:layout_marginTop="36dp"
        android:entries="@array/NacionesPueblos"
        android:spinnerMode="dropdown"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

    <Button
        android:id="@+id/btn_saber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="112dp"
        android:onClick="SeleccionarSaber"
        android:text="@string/selecSaber"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="260dp"
        android:layout_marginEnd="72dp"
        android:onClick="Guardar"
        android:text="@string/Create"
        app:layout_constraintEnd_toStartOf="@+id/button4"
        app:layout_constraintTop_toBottomOf="@+id/sp_TdA" />

    <Button
        android:id="@+id/button4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="260dp"
        android:layout_marginEnd="48dp"
        android:onClick="Cancelar"
        android:text="@string/Cancel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sp_TdA" />

    <VideoView
        android:id="@+id/videoSaber"
        android:layout_width="match_parent"
        android:layout_height="143dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/img" />

    <ImageView
        android:id="@+id/img"
        android:layout_width="match_parent"
        android:layout_height="147dp"
        android:layout_marginEnd="4dp"
        android:contentDescription="@string/Imagen"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tagThemes"
        app:srcCompat="@android:drawable/sym_def_app_icon" />

    <EditText
        android:id="@+id/tagThemes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/temas"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sp_TdA"
        android:autofillHints="" />

</androidx.constraintlayout.widget.ConstraintLayout>