<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#C8CF0606"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="157dp"
        android:layout_height="60dp"
        android:layout_marginTop="24dp"
        android:contentDescription="@string/CdD"
        android:src="@drawable/xs_logo_mobile"
        android:visibility="visible"

        app:layout_constraintEnd_toStartOf="@+id/imageView3"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@drawable/xs_logo_mobile"
        tools:visibility="visible" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="127dp"
        android:layout_height="61dp"
        android:layout_marginTop="24dp"
        android:contentDescription="@string/LOGO_C"
        android:src="@drawable/_corapelogo_web_dw_akademie_03"
        android:visibility="visible"
        app:layout_constraintEnd_toStartOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@drawable/_corapelogo_web_dw_akademie_03"
        tools:visibility="visible" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="130dp"
        android:layout_height="61dp"
        android:layout_marginTop="24dp"
        android:contentDescription="@string/LOGO_SPOONSOR"
        android:src="@drawable/logo_web_dw_akademie_04"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@drawable/logo_web_dw_akademie_04"
        tools:visibility="visible" />

    <Button
        android:id="@+id/button2"
        android:layout_width="411dp"
        android:layout_height="300dp"
        android:layout_marginTop="8dp"
        android:onClick="Crud"
        android:text="@string/SUBIR_INFO"
        app:backgroundTint="#E45100"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <Button
        android:id="@+id/button5"
        android:layout_width="411dp"
        android:layout_height="325dp"
        android:onClick="Buscar"
        android:text="@string/Search"
        app:backgroundTint="#FFD500"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button2" />

</androidx.constraintlayout.widget.ConstraintLayout>